# pysz

./: .gitignore  MANIFEST.in  README.md  plot_by.ipynb  pysz.py  pysz_usage.ipynb  setup.cfg  setup.py
pysz/: pysz.py  pysz.py.old
pysz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pysz/aux_codes/calc_ptilde/: Makefile  calc_ptilde  calc_ptilde.f90  rombint1.f
pysz/data/: ptilde.txt
pysz/source/: .calc_by.f90.swp  .calc_cl.f90.swp  Makefile  calc_by  calc_by.f90  calc_cl.f90  calc_dydzdMh  calc_dydzdMh.f90  cisi.f  da.f90  global_var.f90  mf_module.f90  mf_tinker.f90  mod_ptilde.f90  ptilde.txt  ptilde_module.f90  qgaus2.f  qgaus2_n16.f  qgaus2_n20.f90  rombint.f  sz_functions.f90  tmp.txt  zbrent.f
source/: angular_distance.mod  calc_cl  calc_cl.f90  chebyshev.f  cosmo.f90  cosmo.mod  global_var.f90  global_var.mod  growth.f90  input_ptilde.f90  input_ptilde.mod  linearpk_z.f90  linearpk_z.mod  mf_module.mod  mod_ptilde.mod  qgaus1.f  qgaus2_n14.f  qromb.f  sigma_z.f90  sigma_z.mod  sz2mrs_functions.f90
