[metadata]
name = pysz
version = attr: pysz.__version__
url = https://github.com/ryumakiya/pysz
author = Ryu Makiya
author_email = ryu.makiya@gmail.com
license_file = LICENSE
description = pysz: python wrapper of fastsz code originally devoloped by E. Komatsu
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  classy
  numpy
include_package_data = True
