[metadata]
name = pysz
version = attr: pysz.__version__
url = https://github.com/ryumakiya/pysz
author = Ryu Makiya
author_email = ryu.makiya@gmail.com
license_file = LICENSE
description = pysz: python code for the tSZ power spectra, based on the FORTRAN code fastsz originally devoloped by E. Komatsu
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  numpy
include_package_data = True
